# cnoid-ext-ws

./: README.md  debug.cnoid.pcd
DevGuidePlugin/: CMakeLists.txt  DevGuidePlugin.cpp  debug.d435.pcd  red-wheel-yaw000-dist400.cnoid
PCDScenePlugin/: CMakeLists.txt  PCDScenePlugin.cpp
auto-manip-red-wheel/: CMakeLists.txt  Captured_Frame1.pcd  Captured_Frame2.pcd  debug.cnoid.pcd  debug.d435.pcd  debug.target.pcd  hand-d435-pose-controller.cpp  hand-d435.body  hand-d435a.body  recog-red-wheel-controller.cpp  red-wheel-pc.cnoid  red-wheel-yaw000-dist400.cnoid  red-wheel-yaw030-dist400.cnoid  test-d435-frame.pcd
naruse-arm/: CMakeLists.txt  naruse-arm-angle-controller.cpp  naruse-arm-ik-controller.cpp  naruse-arm-old.yaml  naruse-arm-workspace1.cnoid  naruse-arm-ws1.cnoid  naruse-arm-ws2.cnoid  naruse-arm.yaml  naruse-ik-input.cpp
naruse-lictia/: Desk.body  DigitalSignage_47v.body  LICTiA1F.body  LICTiA2F.body  Low_chair.body  Office_chair.body  Table-120x120.body  Table-120x60.body  Table-65x65.body  cylider-rangecamera-1.cnoid  cylinder.yaml  lictia-ws-1.cnoid  lictia-ws-2.cnoid  lictia-ws-3.cnoid  test-image.pcd
naruse-lictia/resources/: ExihibitionSpace.stl
naruse-mockup/: LeverGreen-D435Light.cnoid  LeverGreen-Light.cnoid  LeverGreen_PipeBrass.body  Lever_agx.body  Piping-110.body  Piping-74.body  ValveRed-PipeBrass.body  Valve_agx.body  naruse-LeverGreen.cnoid  naruse-Meter-LeverGreen-PipeBrass-Labo1-01.cnoid  naruse-Meter-ValveRed-PipeBrass-Labo1-01.cnoid  naruse-MeterLeverPipe-Labo1-01.cnoid  naruse-MeterValvePipe-Labo1-01.cnoid  naruse-STM-ws-01.cnoid  naruse-mockup-green-lever.cnoid  naruse-mockup-red-handle.cnoid  naruse-mockup-ws-01.cnoid  naruse-mockup-ws-02.cnoid  naruse-mockup-ws-03.cnoid  pc-merged.pcd  test-ascii.pcd  test-cnoid-frame.pcd  test-compressed.pcd  test-pass-through-cnoid-frame.pcd  test-pass-through-d435-frame.ascii.pcd  test-pass-through-d435-frame.pcd  x040y000z100.pcd  x040y020z080.pcd  x040y020z100.pcd
naruse-mockup/green-lever-only/: pitch000-yaw000.pcd  pitch000-yaw030.pcd  pitch000-yaw075.pcd  pitch000-yaw270.pcd  pitch030-yaw000.pcd  pitch030-yaw030.pcd  pitch030-yaw090.pcd  pitch030-yaw300.pcd  pitch030-yaw330.pcd  (+11 more)
naruse-model/: Cube-Fusion360.stl  dae-colored-from-stl.dae  dae-converted-from-stl.dae  red-cube-blender.dae  red-cube.dae  sample-bodies.yaml  small-red-cube.dae
naruse-sensor/: CMakeLists.txt  d435-light.yaml  d435-mockup-ws-01.cnoid  d435-save-pcd-controller.cpp  d435.body  d435.yaml  light-controller.cpp  light-on-controller.cpp  light.body  naruse-d435-1.cnoid  naruse-d435-on.cpp  naruse-d435-save.cpp  naruse-d435-sensor-on.cnoid  naruse-d435-sensor-save.cnoid  naruse-pt-d435-save.cpp  naruse-pt-d435-sensor-save.cnoid  omini-d435-wood-panals-01.cnoid  omini-d435.yaml  omni-d435-labo-ws-01.cnoid  omni-d435-save-pcd-controller.cpp  omni-d435.yaml  pt-d435-save-pcd-controller.cpp  pt-d435.yaml  test-cnoid-frame.pcd  test-image.pcd  test-pass-through-cnoid-frame.pcd  test-pass-through-d435-frame.pcd  test-pcd.pcd  vlp16.yaml  wood-plates.body
naruse-strecher/: ModifiedAizuWheel.body  naruse-strecher-camera-workspace-01.cnoid  naruse-strecher-camera-ws1.cnoid  naruse-strecher-camera.yaml  naruse-strecher.yaml
proarm/: CMakeLists.txt  Meter.body  Proarm-Mockup-1.cnoid  Valve-65.body  human-hold.cpp  human.yaml  proarm-hold.cpp  proarm.body  test-cnoid-frame.pcd  test-pass-through-cnoid-frame.pcd  test-pass-through-d435-frame.ascii.pcd  test-pass-through-d435-frame.pcd
wrs2020-mockup/: I-debris.body  J1-debris.body  J2-debris.body  J3-debris.body  J4-debris.body  J5-debris.body  L1-debris.body  L2-debris.body  L3-debris.body  WRS2020-TS2-Mockup-01.cnoid
(+70 files in other folders)
